--- a/pages/detail_mrg/detail_mrg.wxml
+++ b/pages/detail_mrg/detail_mrg.wxml
@@ -13,46 +13,62 @@
       <view class="weui-article__p" style="font-size: 30rpx; margin:auto 45rpx 10rpx 45rpx;">
         {{introduction}}
       </view>
+      <view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;">地址：{{address}}</view>
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;">
+          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx" bindtap="call_map"></image>
+        </view>
+      </view>
     </view>
-    <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">历代名人</view>
-    <view style="padding-left: 50rpx; padding-right: 10rpx;">
+    <view style="disabled: flex;">
+      <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">历代名人</view>
+    </view>
+    <view style="padding-left: 50rpx; padding-right: 10rpx; margin-bottom:110rpx;">
       <view wx:for="{{title_count}}" wx:for-index="index_1" wx:for-item="item_1" wx:key="*this">
-        <view style="margin: 30rpx auto">
-          <view>
+        <view class="background-img" style="display: flex; align-items: center; justify-content: center; position: relative;" data-index_1="{{index_1}}"  catchtap="flodChange">
+          <view style="position: absolute;left: 0; padding-left: 15rpx;">
             <text style="font-weight: 500">{{content_list[index_1+1].title}}</text>
           </view>
+          <view wx:if="{{folded[index_1]}}" class="more_less_view" style="display: flex; align-items: center; justify-content: center; position: absolute;right: 0;">
+            <image class="more_less_img" src="../../image/more.png"></image>
+          </view>
+          <view wx:else class="more_less_view" style="display: flex; align-items: center; justify-content: center; position: absolute;right: 0;">
+            <image class="more_less_img" src="../../image/less.png"></image>
+          </view>
         </view>
-        <view class="view_panel" style="display: flex; padding: 0; margin: 25rpx auto;" wx:for="{{content_list[index_1+1]['list']}}" wx:for-index="index_2" wx:for-item="item_2" wx:key="content_list">
+        <view wx:if="{{!folded[index_1]}}">
+          <view class="view_panel" style="display: flex; padding: 0; margin: 25rpx auto;" wx:for="{{content_list[index_1+1]['list']}}" wx:for-index="index_2" wx:for-item="item_2" wx:key="content_list">
           <view style="padding: 15rpx 5rpx 6rpx 10rpx;">
-          <image src="{{item_2.title_img}}" style="width: 150rpx; height: 130rpx; border-radius: 20rpx;" bindtap="previewImage" data-index_1="{{index_1}}" data-index_2="{{index_2}}"></image>
-        </view>
-        <view style="display: flex;flex-direction: column;align-items: center;justify-content: center;">
-          <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;" wx:if="{{item_2.free}}">{{item_2.title}}(试听)</view>
-          <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;;" wx:elif="{{isPayed}}">{{item_2.title}}</view>
-          <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;;" wx:else>{{item_2.title}}<text style="color: red;">(购买定制书签解锁)</text></view>
-          <view style="display: flex;">
-            <view style="padding-left: 10rpx;">
-              <view class='audiosBox_2' wx:if="{{(index_1==0 && index_2==1) || isPayed}}">
-                <view class="audioOpen_2" bindtap="listenerButtonPlay"  data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}" wx:if="{{!item_2.is_open}}">
-                  <image class='image_play_1' src="../../image/play_1.png" />
+            <image wx:if="{{!folded[index_1]}}" src="{{item_2.title_img}}" style="width: 150rpx; height: 130rpx; border-radius: 20rpx;" bindtap="previewImage" data-index_1="{{index_1}}" data-index_2="{{index_2}}"></image>
+          </view>
+          <view style="display: flex;flex-direction: column;align-items: center;justify-content: center;">
+            <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;" wx:if="{{item_2.free}}">{{item_2.title}}(试听)</view>
+            <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;;" wx:elif="{{isPayed}}">{{item_2.title}}</view>
+            <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;;" wx:else>{{item_2.title}}<text style="color: red;">(购买定制书签解锁)</text></view>
+            <view style="display: flex;">
+              <view style="padding-left: 10rpx;">
+                <view class='audiosBox_2' wx:if="{{item_2.free || isPayed}}">
+                  <view class="audioOpen_2" bindtap="listenerButtonPlay"  data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}" wx:if="{{!item_2.is_open}}">
+                    <image class='image_play_1' src="../../image/play_1.png" />
+                  </view>
+                  <view class="audioOpen_2" bindtap="listenerButtonPause" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}" wx:if="{{item_2.is_open}}">
+                    <image class='image_pause_1' src="../../image/pause_1.png" />
+                  </view>
                 </view>
-                <view class="audioOpen_2" bindtap="listenerButtonPause" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}" wx:if="{{item_2.is_open}}">
-                  <image class='image_pause_1' src="../../image/pause_1.png" />
+                <view class='audiosBox_2' wx:else bindtap="jumpToPreview">
+                  <view class="audioOpen_2">
+                    <image class='image_play_1' src="../../image/lock_1.png" />
+                  </view>
                 </view>
               </view>
-              <view class='audiosBox_2' wx:else bindtap="jumpToPreview">
-                <view class="audioOpen_2">
-                  <image class='image_play_1' src="../../image/lock_1.png" />
-                </view>
-              </view>
-            </view>
-            <view style="display: flex; padding-top: 15rpx;">
-              <view class='slid' style="margin-top: 5rpx;">
-                <slider class="slider_2" bindchange="sliderChange" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}"  block-size="12px" step="1" value="{{item_2.offset}}" max="{{item_2.max}}" selected-color="#4c9dee" wx:if="{{item_2.free || isPayed}}"/>
-                <slider class="slider_2" bindchange="sliderChange" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}"  block-size="12px" step="1" value="{{item_2.offset}}" max="{{item_2.max}}" selected-color="#4c9dee" wx:else disabled/>
-                <view>
-                  <text class='times'>{{item_2.start_time}}</text> <!-- 进度时长 -->
-                  <text class='times'>{{item_2.duration}}</text>   <!-- 总时长 -->
+              <view style="display: flex; padding-top: 15rpx;">
+                <view class='slid' style="margin-top: 5rpx;">
+                  <slider class="slider_2" bindchange="sliderChange" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}"  block-size="12px" step="1" value="{{item_2.offset}}" max="{{item_2.max}}" selected-color="#4c9dee" wx:if="{{item_2.free || isPayed}}"/>
+                  <slider class="slider_2" bindchange="sliderChange" data-index_1="{{index_1}}" data-index_2="{{index_2}}" data-id="{{item_2.id}}"  block-size="12px" step="1" value="{{item_2.offset}}" max="{{item_2.max}}" selected-color="#4c9dee" wx:else disabled/>
+                  <view>
+                    <text class='times'>{{item_2.start_time}}</text> <!-- 进度时长 -->
+                    <text class='times'>{{item_2.duration}}</text>   <!-- 总时长 -->
+                  </view>
                 </view>
               </view>
             </view>
@@ -61,10 +77,18 @@
       </view>
     </view>
 
-    <view wx:if="{{!isPayed}}" bindtap="jumpToPreview" >
-      <image class="add_icon shadow" src="../../image/buy.png"></image>
     </view>
-    
-    </view>
+  </view>
+
+  <view wx:if="{{!isPayed}}" class="buy_bar">
+      <view style="text-align:center; width: 50%;align-items: center;justify-content: center; display:flex; ">
+        <view>购买定制书签支持一下</view>
+      </view>
+      <view style="text-align:center; width: 20%;align-items: center;justify-content: center; display:flex; color: red;font-size: 50rpx">
+        <view>￥{{narrator.price}}</view>
+      </view>
+      <view style="text-align:center; width: 30%;align-items: center;justify-content: center; display:flex;" bindtap="jumpToPreview">
+        <view style="background-color: #ba6652; color: white; width: 70%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;">立即购买</view>
+      </view>
   </view>
 </page>
