--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -6,12 +6,18 @@
     <view class="weui-panel__hd" style="display: flex; justify-content: center;">
       <image style="height: 400rpx; width: 400rpx; border-radius: 400rpx;" src="{{area_img_url}}"></image>
     </view>
-    <view class="weui-panel__hd" style="display: flex; justify-content: center;">
+    <view class="weui-panel__hd" style="display: flex; justify-content: center;" >
       <view class="weui-article__h2" style="font-size: 40rpx;">{{area_name}}</view>
     </view>
     <view class="weui-panel__bd" style="padding-top: 10rpx; padding-bottom: 0rpx;">
       <view class="weui-article__p" style="font-size: 30rpx; margin:auto 45rpx 10rpx 45rpx;">
         {{introduction}}
+      </view>
+      <view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;">地址：{{address}}</view>
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;">
+          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx" bindtap="call_map"></image>
+        </view>
       </view>
     </view>
     <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">讲解员列表</view>
