--- a/pages/detail_mrg/detail_mrg.wxss
+++ b/pages/detail_mrg/detail_mrg.wxss
@@ -1,2 +1,40 @@
 /* pages/detail_mrg/detail_mrg.wxss */
 @import '/pages/narrator/narrator.wxss';
+.background-img{
+  background-color: white;
+  border: 3rpx solid #faca82;
+  border-radius: 10rpx;
+  margin: 15rpx 40rpx;
+  padding: 0rpx auto;
+  height: 80rpx;
+}
+
+.more_less_view{
+  width: 70rpx;
+  height: 65rpx;
+  border-radius: 50%;
+  display: flex;
+
+  margin-left: 20rpx;
+}
+
+.more_less_img{
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.buy_bar{
+  position: fixed;
+  display: flex;
+  height: 90rpx;
+  width: 100%;
+  bottom: 0rpx;
+  background-color: #ffffff;
+  opacity: 1;
+  z-index: 1;
+  scale: 0.9;
+  border-width: 1rpx;
+  border-color: grey;
+  border-style: solid;
+  border-radius: 10rpx;
+}
