--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -13,18 +13,18 @@
       <view class="weui-article__p" style="font-size: 30rpx; margin:auto 45rpx 10rpx 45rpx;">
         {{introduction}}
       </view>
-      <view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
-        <view style="display: flex; align-items: center; justify-content: center;text-align: center;">地址：{{address}}</view>
-        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;">
-          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx" bindtap="call_map"></image>
+      <!--<view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;" bindtap="call_map">地址：{{address}}</view>
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;" bindtap="call_map">
+          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx"></image>
         </view>
-      </view>
+      </view>-->
     </view>
     <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">讲解员列表</view>
     <view class="page__hd">
       <a class="weui-media-box weui-media-box_appmsg" bindtap="jumpTo" wx:for="{{narrator_count}}" wx:for-index="index" wx:key="*this" data-code="{{narrator_list[index].narrator_code}}">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" style="height: 120rpx; width: 120rpx; border-radius: 120rpx;" src="{{narrator_list[index].img_url}}" alt></image>
+          <image class="weui-media-box__thumb" mode="aspectFill" style="height: 120rpx; width: 120rpx; border-radius: 120rpx;" src="{{narrator_list[index].img_url}}" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">{{narrator_list[index].name}}</h4>
@@ -41,4 +41,9 @@
       </a>
     </view>
   </view>
+
+  <view bindtap="call_map" >
+      <image class="add_icon" src="../../image/navigation.png"></image>
+  </view>
+  
 </page>
