--- a/pages/detail_mrg/detail_mrg.wxml
+++ b/pages/detail_mrg/detail_mrg.wxml
@@ -13,17 +13,17 @@
       <view class="weui-article__p" style="font-size: 30rpx; margin:auto 45rpx 10rpx 45rpx;">
         {{introduction}}
       </view>
-      <view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
-        <view style="display: flex; align-items: center; justify-content: center;text-align: center;">地址：{{address}}</view>
-        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;">
-          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx" bindtap="call_map"></image>
+      <!--<view style="display: flex; justify-content:flex-end; margin-bottom: 10rpx;">
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;" bindtap="call_map">地址：{{address}}</view>
+        <view style="display: flex; align-items: center; justify-content: center;text-align: center;margin-left: 20rpx; margin-right: 60rpx;" bindtap="call_map">
+          <image src="../../image/navigation.png" style="width: 40rpx; height: 40rpx"></image>
         </view>
-      </view>
+      </view>-->
     </view>
     <view style="disabled: flex;">
       <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">历代名人</view>
     </view>
-    <view style="padding-left: 50rpx; padding-right: 10rpx; margin-bottom:110rpx;">
+    <view style="padding-left: 50rpx; padding-right: 10rpx;">
       <view wx:for="{{title_count}}" wx:for-index="index_1" wx:for-item="item_1" wx:key="*this">
         <view class="background-img" style="display: flex; align-items: center; justify-content: center; position: relative;" data-index_1="{{index_1}}"  catchtap="flodChange">
           <view style="position: absolute;left: 0; padding-left: 15rpx;">
@@ -80,6 +80,8 @@
     </view>
   </view>
 
+<view style="margin: 45rpx auto;">　</view>
+
   <view wx:if="{{!isPayed}}" class="buy_bar">
       <view style="text-align:center; width: 50%;align-items: center;justify-content: center; display:flex; ">
         <view>购买定制书签支持一下</view>
@@ -91,4 +93,9 @@
         <view style="background-color: #ba6652; color: white; width: 70%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;">立即购买</view>
       </view>
   </view>
+
+  <view bindtap="call_map" >
+      <image class="add_icon" src="../../image/navigation.png"></image>
+  </view>
+
 </page>
