--- a/pages/narrator/narrator.wxss
+++ b/pages/narrator/narrator.wxss
@@ -1,5 +1,6 @@
 /* pages/demo1/demo1.wxss */
 /**index.wxss**/
+@import '/common/common.wxss';
 .audiosBox{
   width: 92%;
   margin: auto;
@@ -104,19 +105,6 @@
 .title view{
   text-indent: 2em;
  
-}
-
-.add_icon{
-  position: fixed;
-  width:80rpx;
-  height:80rpx;
-  bottom: 70rpx;
-  right: 50rpx;
-  background-color: #ffffff;
-  border-radius: 70rpx;
-  opacity: 1;
-  z-index: 1;
-  scale: 0.9;
 }
 
 .shadow {
