--- a/common/common.wxss
+++ b/common/common.wxss
@@ -1,13 +1,13 @@
 .buy_bar{
   position: fixed;
   display: flex;
-  height: 100rpx;
+  height: 90rpx;
   width: 100%;
   bottom: 0rpx;
   background-color: #ffffff;
   opacity: 1;
   z-index: 1;
-  scale: 0.9;
+  scale: 1;
   border-width: 1rpx;
   border-color: grey;
   border-style: solid;
@@ -23,4 +23,21 @@
   opacity: 1;
   z-index: 1;
   scale: 0.9;
+}
+
+.view_button_class{
+  display: flex; align-items: center; justify-content: center;
+}
+
+.permission_bar{
+  position: fixed;
+  width: 100%;
+  height: 300rpx;
+  bottom: -300rpx;
+  background-color: #ffffff;
+  opacity: 1;
+  z-index: 4;
+  scale: 1;
+  border-radius: 20rpx;
+  border: 3rpx solid #faca82;
 }
