--- a/pages/all/all.wxml
+++ b/pages/all/all.wxml
@@ -8,7 +8,7 @@
       <!--<image style="width: 750rpx; height: 300rpx" src="{{top_img}}"></image>-->
       <swiper autoplay="true" interval="2000" style="width: 100%; height: 350rpx">
         <swiper-item wx:for="{{top_img_list}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
-          <image src='{{item}}' mode='widthFix' class='img'/>
+          <image src='{{item}}' mode='aspectFill' class='img'/>
         </swiper-item>
       </swiper>
     </view>
@@ -16,7 +16,7 @@
     <view class="page__hd">
       <a bindtap="jumpTo" class="weui-media-box weui-media-box_appmsg" wx:for="{{area_count}}" wx:for-index="index" wx:for-item="item" wx:key="*this" data-code="{{area_list[index].area_code}}">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="{{area_list[index].img_url}}" style="border-radius: 15rpx;" alt></image>
+          <image class="weui-media-box__thumb" mode="aspectFill" src="{{area_list[index].img_url}}" style="border-radius: 15rpx;" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">{{area_list[index].name}}</h4>
