--- a/pages/detail_mrg/detail_mrg.wxml
+++ b/pages/detail_mrg/detail_mrg.wxml
@@ -20,10 +20,35 @@
         </view>
       </view>-->
     </view>
-    <view style="disabled: flex;">
-      <view class="weui-panel weui-panel__hd" style="background:#ffffff00;z-index:0; margin-top: 0rpx;">历代名人</view>
+    <view class="swiper-tab" style="margin-left: 50rpx; margin-right: 50rpx;width: 88%;">
+      <view class="swiper-tab-list {{0 == current_tab ? 'on' : 'off'}}" bindtap="swichNav" style="width: 25%;" data-tab="0">讲解员</view>
+      <view class="swiper-tab-list {{1 == current_tab ? 'on' : 'off'}}" bindtap="swichNav" style="width: 35%;" data-tab="1">历代名人</view>
     </view>
-    <view style="padding-left: 50rpx; padding-right: 10rpx;">
+
+
+    <view style="padding-left: 20rpx; padding-right: 20rpx;margin-top: 0;padding-top: 0" class="{{0 == current_tab ? 'show' : 'hide'}}">
+      <view class="page__hd">
+        <a class="weui-media-box weui-media-box_appmsg" bindtap="jumpTo" wx:for="{{narrator_count}}" wx:for-index="index" wx:key="*this" data-code="{{narrator_list[index].narrator_code}}">
+          <view class="weui-media-box__hd">
+            <image class="weui-media-box__thumb" mode="aspectFill" style="height: 120rpx; width: 120rpx; border-radius: 120rpx;" src="{{narrator_list[index].img_url}}" alt></image>
+          </view>
+          <view class="weui-media-box__bd">
+            <h4 class="weui-media-box__title">{{narrator_list[index].name}}</h4>
+            <view style="opacity: 0.7; font-size: 25rpx">{{narrator_list[index].title}}</view>
+            <view style="display: flex;">
+              <view style="opacity: 0.7; font-size: 25rpx">热度:　</view>
+              <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
+              <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
+              <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
+              <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
+              <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
+            </view>
+          </view>
+        </a>
+      </view>
+    </view>
+
+    <view style="padding-left: 20rpx; padding-right: 20rpx; margin-top: 0;padding-top: 0" class="{{1 == current_tab ? 'show' : 'hide'}}">
       <view wx:for="{{title_count}}" wx:for-index="index_1" wx:for-item="item_1" wx:key="*this">
         <view class="background-img" style="display: flex; align-items: center; justify-content: center; position: relative;" data-index_1="{{index_1}}"  catchtap="flodChange">
           <view style="position: absolute;left: 0; padding-left: 15rpx;">
@@ -36,10 +61,10 @@
             <image class="more_less_img" src="../../image/less.png"></image>
           </view>
         </view>
-        <view wx:if="{{!folded[index_1]}}">
+        <view wx:if="{{!folded[index_1]}}" style="padding-left: 50rpx; padding-right: 50rpx;">
           <view class="view_panel" style="display: flex; padding: 0; margin: 25rpx auto;" wx:for="{{content_list[index_1+1]['list']}}" wx:for-index="index_2" wx:for-item="item_2" wx:key="content_list">
           <view style="padding: 15rpx 5rpx 6rpx 10rpx;">
-            <image wx:if="{{!folded[index_1]}}" src="{{item_2.title_img}}" style="width: 150rpx; height: 130rpx; border-radius: 20rpx;" bindtap="previewImage" data-index_1="{{index_1}}" data-index_2="{{index_2}}"></image>
+            <image wx:if="{{!folded[index_1]}}" src="{{item_2.title_img}}" mode="aspectFill" style="width: 150rpx; height: 130rpx; border-radius: 20rpx;" bindtap="previewImage" data-index_1="{{index_1}}" data-index_2="{{index_2}}"></image>
           </view>
           <view style="display: flex;flex-direction: column;align-items: center;justify-content: center;">
             <view style="font-size: 25rpx; margin: 0;width: 100%; padding-left: 80rpx;" wx:if="{{item_2.free}}">{{item_2.title}}(试听)</view>
@@ -75,23 +100,24 @@
           </view>
         </view>
       </view>
+      </view>
+      <view style="margin: 45rpx auto;">　</view>
     </view>
 
-    </view>
   </view>
 
-<view style="margin: 45rpx auto;">　</view>
-
-  <view wx:if="{{!isPayed}}" class="buy_bar">
-      <view style="text-align:center; width: 50%;align-items: center;justify-content: center; display:flex; ">
+  <view wx:if="{{!isPayed&&1==current_tab}}" class="buy_bar">
+    <view style="text-align:center; width: 50%;align-items: center;justify-content: center; display:flex; ">
         <view>购买定制书签支持一下</view>
-      </view>
-      <view style="text-align:center; width: 20%;align-items: center;justify-content: center; display:flex; color: red;font-size: 50rpx">
-        <view>￥{{narrator.price}}</view>
-      </view>
-      <view style="text-align:center; width: 30%;align-items: center;justify-content: center; display:flex;" bindtap="jumpToPreview">
-        <view style="background-color: #ba6652; color: white; width: 70%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;">立即购买</view>
-      </view>
+    </view>
+    <view style="text-align:center; width: 20%;align-items: center;justify-content: center; display:flex; color: red;font-size: 50rpx">
+      <view>￥{{narrator.price}}</view>
+    </view>
+    <view style="text-align:center; width: 30%;align-items: center;justify-content: center; display:flex;">
+      <!--<view style="background-color: #ba6652; color: white; width: 70%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;">立即购买</view>-->
+      <button wx:if="{{!is_user_info_ready}}" size="mini" style="background-color: #ba6652; color: white; width: 77%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;" open-type="getUserInfo" bindgetuserinfo="getUserInfo">购买</button>
+      <button wx:else size="mini" style="background-color: #ba6652; color: white; width: 77%; height: 60%;border-radius: 20rpx;align-items: center;text-align:center;justify-content: center;display:flex;" bindtap="jumpToPreview">购买</button>
+    </view>
   </view>
 
   <view bindtap="call_map" >
