--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -2,7 +2,7 @@
 <view>
   <view class="weui-flex" style="margin: auto">
     <view class="weui-flex__item" style="font-size: 30rpx; display: flex; margin-top: 7rpx; justify-content: center;">
-      绍兴市海棠文化旅游发展有限公司
+      绍兴名城景区发展有限公司
     </view>
   </view>
   <view class="weui-flex" style="margin: auto">
