--- a/pages/detail_mrg/detail_mrg.wxml
+++ b/pages/detail_mrg/detail_mrg.wxml
@@ -35,14 +35,14 @@
           <view class="weui-media-box__bd">
             <h4 class="weui-media-box__title">{{narrator_list[index].name}}</h4>
             <view style="opacity: 0.7; font-size: 25rpx">{{narrator_list[index].title}}</view>
-            <view style="display: flex;">
+            <!--<view style="display: flex;">
               <view style="opacity: 0.7; font-size: 25rpx">热度:　</view>
               <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
               <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
               <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
               <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
               <image style="width: 40rpx;height: 40rpx;" src="../../image/fire.png"></image>
-            </view>
+            </view>-->
           </view>
         </a>
       </view>
