--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -37,6 +37,6 @@
 		</view>
 
 		<view class="weui-footer weui-footer_fixed-bottom" style="padding-bottom: 40rpx;">
-    	<view class="weui-footer__text">海棠文化 | xuyulong提供技术支持</view>
+    	<view class="weui-footer__text">名城景区 | xuyulong提供技术支持</view>
 		</view>
 </view>
