--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -9,11 +9,8 @@
         <!-- 商品 -->
         <view id="goods">
             <swiper autoplay="true" interval="2000" style="width: 100%; height: 414rpx">
-                <swiper-item>
-                    <image src='../../image/demo11.jpg' mode='aspectFill' class='img'/>
-                </swiper-item>
-                <swiper-item>
-                    <image src='../../image/demo11.jpg' mode='aspectFill' class='img'/>
+                <swiper-item wx:for="{{img_list}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
+                    <image src='{{item}}' data-index="{{index}}" mode='aspectFill' class='img' bindtap="previewImg"/>
                 </swiper-item>
             </swiper>
         </view>
@@ -21,14 +18,15 @@
         <!-- 价格 -->
         <view style="height: 70rpx; display: flex; flex-direction: column; justify-content: center;">
             <view style="color: #811222; font-weight: 900; font-size: 35rpx; padding-left: 20rpx;">
-                ￥29.00
+                ￥{{goods_info.min_price}}
+                <text style="color: black; font-weight: 500; font-size: 25rpx;">起</text>
             </view>
         </view>
 
         <!-- 标题 -->
         <view style="height: 70rpx; display: flex; flex-direction: column; ">
             <view style="font-weight: 700; font-size: 30rpx; padding-left: 20rpx;">
-                海棠文化 City Walk
+                {{goods_info.goods_name}}
             </view>
         </view>
 
@@ -50,7 +48,7 @@
         <view id="detail">
             <view style="padding: 20rpx; font-size: 35rpx; font-weight: 900" >产品详情</view>
             <view style="padding-left: 20rpx; padding-right: 20rpx;">
-                <image src="https://onlineexpound.sxhttour.com/images/article/article.jpg" mode="widthFix" style="width: 100%"></image>
+                <image src="{{goods_info.detail_img}}" mode="widthFix" style="width: 100%"></image>
             </view>
         </view>
     </scroll-view>
@@ -77,14 +75,14 @@
     <!-- 规格详情 -->
     <view style="display:flex">
         <view style="padding-left: 40rpx; padding-top: 30rpx">
-            <image src='../../image/demo11.jpg' mode='aspectFill' class="img" style="height: 144rpx; width: 220rpx"/>
+            <image src='{{spec_list[spec_index_0]["list"][spec_index_1].img}}' mode='aspectFill' class="img" style="height: 144rpx; width: 220rpx"/>
         </view>
         <view>
             <view style="color: #811222; font-weight: 900; font-size: 35rpx; padding-left: 20rpx;padding-top: 70rpx">
-                ￥29.00
+                ￥{{spec_list[1]["list"][spec_index_1].price}}
             </view>
             <view style="padding-left: 20rpx; opacity: 0.7; font-size: 30rpx;">
-                库存11件
+                库存{{spec_list[1]["list"][spec_index_1].stock}}件
             </view>
         </view>
         <view style="padding-left: 260rpx; padding-top: 30rpx" bindtap="hideSize">
@@ -92,31 +90,33 @@
         </view>
     </view>
     <view style="padding-left: 40rpx; padding-top: 15rpx; font-weight: 500; font-size: 35rpx;">
-        日期
-    </view>
-    <view style="padding-left: 45rpx; padding-top: 10rpx; display: flex;">
-        <view class="size_detail">3月1日</view>
-        <view class="size_detail">3月11日</view>
-    </view>
-    <view style="padding-left: 40rpx; padding-top: 15rpx; font-weight: 500; font-size: 35rpx;">
         时间
     </view>
     <view style="padding-left: 45rpx; padding-top: 10rpx; display: flex;">
-        <view class="size_detail">8:30</view>
-        <view class="size_detail">13:30</view>
+        <view wx:for="{{spec_list[0]['list']}}" wx:for-index="index" wx:for-item="item" wx:key="*this" data-index_0="{{index}}" bindtap="chooseSpec0" class="size_detail {{spec_index_0==index? 'spec_select':'spec_unselect'}}">
+            {{item.value}}
+        </view>
+    </view>
+    <view style="padding-left: 40rpx; padding-top: 15rpx; font-weight: 500; font-size: 35rpx;">
+        路线
+    </view>
+    <view style="padding-left: 45rpx; padding-top: 10rpx; display: flex;">
+        <view wx:for="{{spec_list[1]['list']}}" wx:for-index="index" wx:for-item="item" wx:key="*this" data-index_1="{{index}}" bindtap="chooseSpec1" class="size_detail {{spec_index_1==index? 'spec_select':'spec_unselect'}}">
+            {{item.value}}
+        </view>
     </view>
     <view style="display: flex; align-items: center; padding-left: 40rpx; padding-top: 20rpx;">
         <view style="font-weight: 500; font-size: 35rpx; width: 60%; display: flex; align-items:">
             数量
         </view>
         <view style="display: flex; align-items: center; margin-left: 80rpx">
-            <view style="display: flex; align-items: center;justify-content: center;" class="bak_color radius_left">
+            <view style="display: flex; align-items: center;justify-content: center;" class="bak_color radius_left" bindtap="min">
                 <image src='../../image/min.png' mode='aspectFill' class="img" style="height: 55rpx; width: 55rpx"></image>
             </view>
             <view style="display: flex; align-items: center;justify-content: center;height: 55rpx; width: 60rpx;margin: auto 4rpx" class="bak_color">
-                1
+                {{num}}
             </view>
-            <view style="display: flex; align-items: center;justify-content: center;" class="bak_color radius_right">
+            <view style="display: flex; align-items: center;justify-content: center;" class="bak_color radius_right" bindtap="add">
                 <image src='../../image/add.png' mode='aspectFill' class="img" style="height: 55rpx; width: 55rpx"></image>
             </view>
         </view>
@@ -125,7 +125,7 @@
         <view class="view_button_class size_buy_button" style="background-color: #989898">
             加入购物车
         </view>
-        <view class="view_button_class size_buy_button" style="background-color: #c08d94;">
+        <view class="view_button_class size_buy_button" style="background-color: #8a222d;" bindtap="jumpToConfirm">
             立即购买
         </view>
     </view>
