--- a/pages/orders/orders.wxss
+++ b/pages/orders/orders.wxss
@@ -1,4 +1,11 @@
 /* pages/orders/orders.wxss */
+@import "../../pages/goods/goods.wxss";
+page{
+  background: #ececea;
+  width: 100%;
+  height: 100%;
+}
+
 .btn {
   width: 40% !important;
   height: 22% !important;
@@ -13,7 +20,7 @@
   padding-bottom:5rpx;
   text-align:center;
   text-decoration:none;
-  color:#3dcc19;
+  color:#00b26a;
   background-color:#F8F8F8;
 }
 
@@ -34,4 +41,28 @@
   color:#3dcc19;
   background-color:#F8F8F8;
   opacity: 0.3;
+}
+
+.vertical-center {
+  display: flex;
+  align-items: center;
+}
+
+.horizontal-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tap-view {
+  background-color: #ececea !important;
+  color: black !important;
+}
+
+.use-view {
+  color: white;width: 20%; background-color:#00b26a;height: 70%; justify-content: center; border-radius: 40rpx;border: 1rpx solid #00b26a;
+}
+
+.refund-view {
+  color: #8b8b8b;width: 20%; height: 70%; justify-content: center; border-radius: 40rpx;border: 1rpx solid #00b26a;
 }
