--- a/pages/preview/preview.wxml
+++ b/pages/preview/preview.wxml
@@ -1,4 +1,5 @@
 <view class="page">
+  <image class='background' src="../../image/background.jpg" mode="aspectFill"></image>
   <view class="weui-form-preview">
     <view class="weui-form-preview__hd">
       <label class="weui-form-preview__label">付款金额</label>
@@ -15,12 +16,12 @@
       </view>
       <view class="weui-form-preview__item">
         <label class="weui-form-preview__label">其他说明</label>
-        <text class="weui-form-preview__value">您可以在海棠旗下任意景区领取书签</text>
+        <text class="weui-form-preview__value">感谢您的支持</text>
       </view>
     </view>
     <view class="weui-form-preview__ft" style="position: fixed; bottom: 0;width: 100%; height: 105rpx;">
       <a class="weui-form-preview__btn weui-form-preview__btn_default" bindtap="jumpBack" data-flag="1">返回</a>
-      <a class="weui-form-preview__btn weui-form-preview__btn_primary" bindtap="goPay" data-flag="2">购买书签</a>
+      <a class="weui-form-preview__btn weui-form-preview__btn_primary" bindtap="goPay" data-flag="2">购买</a>
     </view>
   </view>
 </view>
